syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "https://github.com/e2b-dev/infra/orchestrator";

// needs to be different from the enumeration in the template manager
enum ServiceInfoStatus {
  Healthy = 0;
  Draining = 1;
  Unhealthy = 2;
}

enum ServiceInfoRole {
  TemplateBuilder = 0;
  Orchestrator = 1;
}

message DiskMetrics {
  string mount_point = 1;
  string device = 2;
  string filesystem_type = 3;
  int64 used_mb = 4;
  int64 total_mb = 5;
}

message ServiceInfoResponse {
  string node_id = 1;
  string service_id = 2;
  string service_version = 3;
  string service_commit = 4;

  ServiceInfoStatus service_status = 51;
  repeated ServiceInfoRole service_roles = 52;
  google.protobuf.Timestamp service_startup = 53;

  int64 metric_vcpu_used = 101 [deprecated = true];
  int64 metric_memory_used_mb = 102 [deprecated = true];
  int64 metric_disk_mb = 103 [deprecated = true];
  int64 metric_sandboxes_running = 104;
  
  // Host system usage metrics
  int64 metric_host_cpu_percent = 105;
  int64 metric_host_memory_used_mb = 106;

  // Host system total resources
  int64 metric_host_cpu_count = 108;
  int64 metric_host_memory_total_mb = 109;

  // Allocated resources to sandboxes
  int64 metric_vcpu_allocated = 110;
  int64 metric_memory_allocated_mb = 111;
  int64 metric_disk_allocated_mb = 112;
  
  // Detailed disk metrics for each mount point
  repeated DiskMetrics metric_host_disks = 113;
}

message ServiceStatusChangeRequest {
  ServiceInfoStatus service_status = 2;
}

service InfoService {
  rpc ServiceInfo(google.protobuf.Empty) returns (ServiceInfoResponse);
  rpc ServiceStatusOverride(ServiceStatusChangeRequest) returns (google.protobuf.Empty);
}
