syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "https://github.com/e2b-dev/infra/template-manager";


message InitLayerFileUploadRequest {
  string templateID = 1;
  string hash = 2;
  optional string cacheScope = 3;
}

message InitLayerFileUploadResponse{
  bool present = 1;
  optional string url = 2;
}

message TemplateStep {
  string type = 1;
  repeated string args = 2;
  optional bool force = 3;

  optional string filesHash = 4;
}

message TemplateConfig {
  string templateID = 1;
  string buildID = 2;

  int32 memoryMB = 3;
  int32 vCpuCount = 4;
  int32 diskSizeMB = 5;

  string kernelVersion = 6;
  string firecrackerVersion = 7;
  string startCommand = 8;
  bool hugePages = 9;

  string readyCommand = 10;

  string fromImage = 11;
  optional bool force = 12;
  repeated TemplateStep steps = 13;
}

message TemplateCreateRequest {
  TemplateConfig template = 1;
  optional string cacheScope = 2;
}

enum LogLevel {
    Debug = 0;
    Info = 1;
    Warn = 2;
    Error = 3;
}

message TemplateStatusRequest {
  string templateID = 1;
  string buildID = 2;
  optional int32 offset = 3;
  optional LogLevel level = 4;
}

// Data required for deleting a template.
message TemplateBuildDeleteRequest {
  string buildID = 1;
  string templateID = 2;
}

message TemplateBuildMetadata {
  int32 rootfsSizeKey = 1;
  string envdVersionKey = 2;
}

enum TemplateBuildState {
  Building = 0;
  Failed = 1;
  Completed = 2;
}

message TemplateBuildLogEntry {
  google.protobuf.Timestamp timestamp = 1;
  string message = 2;
  LogLevel level = 3;
}

// Logs from template build
message TemplateBuildStatusResponse {
  TemplateBuildState status = 1;
  TemplateBuildMetadata metadata = 2;
  optional string reason = 3;
  repeated string logs = 4;
  repeated TemplateBuildLogEntry logEntries = 5;
}

// Interface exported by the server.
service TemplateService {
  // TemplateCreate is a gRPC service that creates a new template
  rpc TemplateCreate (TemplateCreateRequest) returns (google.protobuf.Empty);

  // TemplateStatus is a gRPC service that streams the status of a template build
  rpc TemplateBuildStatus (TemplateStatusRequest) returns (TemplateBuildStatusResponse);

  // TemplateBuildDelete is a gRPC service that deletes files associated with a template build
  rpc TemplateBuildDelete (TemplateBuildDeleteRequest) returns (google.protobuf.Empty);

  // InitLayerFileUpload requests an upload URL for a tar file containing layer files to be cached for the template build.
  rpc InitLayerFileUpload (InitLayerFileUploadRequest) returns (InitLayerFileUploadResponse);
}
